// Copyright 2015 gRPC authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package rest;		// namespace

// The CRUDs service definition.
service CRUDs {
  rpc SelectTbla (TblaQry) returns (stream TblaRec) {}
  rpc InsertTbla (TblaRec) returns (TblaRec) {}
  rpc UpdateTbla (TblaRec) returns (TblaRec) {}
  rpc DeleteTbla (TblaRec) returns (TblaRec) {}
}

message TblaQry {
  string query = 1;
}

// The response message containing the greetings
message TblaRec {
  uint64 ono = 1;
  string fldStr = 2;
  int32 fldInt = 3;
  double fldDbl = 4;
  double fldDcm = 5;	// String olabilir
  int64 fldDateTicks = 6;	// new DateTime(fldDateTicks) => DateTime 
}
